--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Markdown Blog</title>
-	<link rel="stylesheet" href="/node_modules/semantic-ui-css/semantic.css">
-	<link rel="stylesheet" href="/css/style.css">
+    <meta charset="UTF-8">
+    <title>Markdown Blog</title>
+    <link rel="stylesheet" href="/node_modules/semantic-ui-css/semantic.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-	<!-- Your code starts here ! -->
-	<div id="app"></div>
-	<!-- fin de votre html -->
-	<script src="/node_modules/jquery/dist/jquery.js"></script>
-	<script src="/node_modules/showdown/dist/showdown.js"></script>
-	<script src="/js/app.js"></script>
+    <!-- Your code starts here ! -->
+    <div id="app"></div>
+    <hr>
+    <div id="md"></div>
+    <!-- fin de votre html -->
 </body>
+<script src="/node_modules/jquery/dist/jquery.js"></script>
+<script src="/node_modules/showdown/dist/showdown.js"></script>
+<script src="/js/app.js"></script>
+
 </html>
